fixed pin alignments and figcaption font

--- a/src/app/executive/dyfi-pin/dyfi-pin.component.scss
+++ b/src/app/executive/dyfi-pin/dyfi-pin.component.scss
@@ -12,10 +12,3 @@
   }
 }
 
-img {
-  margin-bottom: 1em;
-  max-width: 100%;
-}
-
-
-
