--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.scss
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.scss
@@ -2,14 +2,6 @@
 .dyfi-responses-badge {
   display: flex;
   justify-content: center;
-  margin: 1em 0 0;
-}
-
-.dyfi-responses-abbr {
-  color: #777;
-  font-size: 0.77em;
-  margin: 0.5em 0 2em;
-  text-align: center;
 }
 
 .responses-digit {
@@ -37,6 +29,3 @@
   }
 }
 
-figure {
-  text-align: center;
-}
