--- a/src/app/executive/pager-pin/pager-pin.component.scss
+++ b/src/app/executive/pager-pin/pager-pin.component.scss
@@ -1,9 +1,3 @@
-img {
-  display: block;
-  margin: 0.5em auto;
-  width: 70%;
-}
-
 [card-title] {
   display: block;
   position: relative;
@@ -17,3 +11,4 @@ img {
     white-space: nowrap;
   }
 }
+
