--- a/src/app/executive/tsunami-pin/tsunami-pin.component.scss
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.scss
@@ -1,19 +1,5 @@
-a.pin-link {
-  color: inherit;
-  text-decoration: inherit;
-}
-
-.tsunami-link {
-  color: #0071bc;
-  text-decoration: underline;
-}
-
-.tsunami-logo {
-  border: 1px solid #ddd;
-  display: block;
-  margin: 1em auto;
-  padding: .5em;
-  width: 60%;
+img {
+  width: 50%;
 }
 
 
